--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -888,6 +888,10 @@ tab19 <- sqlQuery(sqldb, "select * from pro_questions")
 kable(tab19)
 ```
 
+```{r tab20_res, echo = F, include=T, error=T}
+tab20 <- 
+```
+
 
 
 ####Total program run time:
